--- a/h2o-automl/build.gradle
+++ b/h2o-automl/build.gradle
@@ -5,9 +5,13 @@ dependencies {
   compile project(":h2o-core")
   compile project(":h2o-algos")
   compileOnly project(":h2o-ext-xgboost")
+  compile project(":h2o-ext-target-encoder")
 
   // Test dependencies only
   testCompile project(":h2o-test-support")
+  testCompile "org.mockito:mockito-core:2.23.0"
+  testCompile "com.pholser:junit-quickcheck-core:0.9"
+  testCompile 'com.pholser:junit-quickcheck-generators:0.9'
   testCompile project(":h2o-ext-xgboost")
   testRuntimeOnly project(":${defaultWebserverModule}")
 }
