--- a/h2o-hadoop-3/assemblyjar.gradle
+++ b/h2o-hadoop-3/assemblyjar.gradle
@@ -6,6 +6,10 @@ description = 'H2O HDFS client shadowjar for Hadoop ' + hadoopVersion
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+java {
+    disableAutoTargetJvm()
+}
+
 dependencies {
     compile(project(":h2o-mapreduce-generic")) {
         transitive = false
