--- a/h2o-hadoop-3/h2o-cdp7.0-assembly/build.gradle
+++ b/h2o-hadoop-3/h2o-cdp7.0-assembly/build.gradle
@@ -10,6 +10,10 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 description = 'H2O HDFS client shadowjar for Hadoop ' + hadoopVersion
 
+java {
+    disableAutoTargetJvm()
+}
+
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
