Make sure the default TLS version will be the same for Jetty & internal security

--- a/h2o-jetty-8/build.gradle
+++ b/h2o-jetty-8/build.gradle
@@ -2,6 +2,7 @@ description = "Brings Jetty 8 as the HTTP implementation used in H2O server-side
 
 dependencies {
     compile project(":h2o-webserver-iface")
+    compile project(":h2o-security")
     compile 'org.eclipse.jetty:jetty-server:8.1.21.v20160908'
     compile "org.eclipse.jetty:jetty-servlets:8.1.21.v20160908"
     compile "org.eclipse.jetty:jetty-plus:8.1.21.v20160908"
