[PUBDEV-7265] Fix publishing after upgrading to gradle 5.6.4

--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -18,11 +18,7 @@ task testJar(type: Jar, dependsOn: testClasses, group: "build") {
 // Create a configuration containing only for test artifacts
 configurations {
     testArchives
-}
-
-// Explicitly 
-artifacts {
-    testArchives testJar
+    toPublish
 }
 
 // Enable support for multi-node testing
@@ -47,13 +43,18 @@ task javadocJar(type: Jar) {
     from javadoc
 }
 
-plugins.withType(org.gradle.api.publish.maven.plugins.MavenPublishPlugin) {
-    // Publish it only if "maven-publish" plugin is in the context
-    artifacts {
-        toPublish javadocJar
-        toPublish testJar
-    }
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
 }
+
+artifacts {
+    testArchives testJar
+    toPublish sourcesJar
+    toPublish javadocJar
+    toPublish testJar
+}
+
 
 
 clean {
