--- a/gradle/scala.gradle
+++ b/gradle/scala.gradle
@@ -29,6 +29,7 @@ tasks.withType(ScalaCompile) {
 // Create jar
 task testJar(type: Jar, dependsOn: testClasses) {
     appendix = 'test'
+    classifier = 'tests'
     from sourceSets.test.output
 }
 
@@ -38,14 +39,23 @@ task scaladocJar(type: Jar) {
     from scaladoc
 }
 
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
 // Create a configuration containing only for test artifacts
 configurations {
     testArchives
+    toPublish
 }
 
 // Explicitly
 artifacts {
     testArchives testJar
+    toPublish scaladocJar
+    toPublish testJar
+    toPublish sourcesJar
 }
 
 // Enable support for multi-node testing
