Fix integ tests after upgrading gradle

--- a/h2o-test-integ/build.gradle
+++ b/h2o-test-integ/build.gradle
@@ -6,6 +6,9 @@ dependencies {
 
 def runner = new File("$rootDir/scripts/run.py").canonicalPath
 
+java {
+    disableAutoTargetJvm()
+}
 
 // Python MultiJVMTests
 // --------------------
@@ -62,6 +65,8 @@ task cleanNodeJsSingleJVMTests(type: Delete) {
 task cleanNodeJsSingleJVMTestsCoverageData(type: Delete) {
     delete "$nodeJsSingleJVMTestsPath/results/jacoco"
 }
+
+
 
 // Commented out on 12/15/2014
 // test.dependsOn runNodeJsSingleJVMTests
