--- a/build.gradle
+++ b/build.gradle
@@ -240,7 +240,13 @@ subprojects {
             }
         }
     }
-    
+
+    // Publish artifacts - we should filter subproject in future but now apply publisher plugin
+    // to all projects
+    if (project in publishedProjects) {
+      apply from: "$rootDir/gradle/publish.gradle"
+    }
+
     // Note: this is deprecated and will be removed in the future
     apply from: "$rootDir/gradle/makeSupport.gradle"
 
@@ -295,11 +301,6 @@ subprojects {
             apply from: "$rootDir/gradle/ubench.gradle"
         }
     }
-
-    if (project in publishedProjects) {
-        apply from: "$rootDir/gradle/publish.gradle"
-    }
-
 }
 
 //
