[PUBDEV-7294] install docs deps only for py3

--- a/h2o-docs/build.gradle
+++ b/h2o-docs/build.gradle
@@ -13,7 +13,8 @@ def bookletList = [
             "DeepLearningBooklet",
             "SparklingWaterBooklet",
             "RBooklet",
-            "PythonBooklet"]
+            "PythonBooklet"
+]
 
 task(createBuildInfoTex) {
     doLast {
