Revert "Merge remote-tracking branch 'origin/rel-yu'"
This reverts commit 18abfaf9499410f137c201eb84839cfd1898098c, reversing
changes made to 585c8d635484efe11821df6b883228fbc13c7b43.

--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -43,14 +43,12 @@ RUN \
 
 # Install python dependencies
 RUN \
-  wget https://raw.githubusercontent.com/h2oai/h2o-3/master/h2o-py/test-requirements.txt && \
-  wget https://raw.githubusercontent.com/h2oai/h2o-3/master/h2o-py/docs-requirements.txt && \
+  wget https://raw.githubusercontent.com/h2oai/h2o-3/master/h2o-py/requirements.txt && \
   /usr/bin/pip install --upgrade pip && \
-  /usr/bin/pip install -r test-requirements.txt && \
+  /usr/bin/pip install -r requirements.txt && \
   /usr/bin/pip3 install --upgrade pip && \
-  /usr/bin/pip3 install -r test-requirements.txt && \
-  /usr/bin/pip3 install -r docs-requirements.txt && \
-  rm *requirements.txt 
+  /usr/bin/pip3 install -r requirements.txt && \
+  rm requirements.txt 
 
 # Install R dependencies
 RUN \
