--- a/h2o-docs/build.gradle
+++ b/h2o-docs/build.gradle
@@ -13,8 +13,7 @@ def bookletList = [
             "DeepLearningBooklet",
             "SparklingWaterBooklet",
             "RBooklet",
-            "PythonBooklet"
-]
+            "PythonBooklet"]
 
 task(createBuildInfoTex) {
     doLast {
