--- a/h2o-genmodel-extensions/xgboost/build.gradle
+++ b/h2o-genmodel-extensions/xgboost/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     // XGBoost dependencies published into Maven central by H2O
     // Versioning rules may differ for XGBoost artifacts published by H2O
-    compile("ai.h2o:xgboost4j:${xgboost4jVersion}") {
+    compile("ai.h2o:xgboost4j_2.12:${xgboost4jVersion}") {
         exclude group: 'org.scala-lang', module: 'scala-compiler'
         exclude group: 'org.scala-lang', module: 'scala-reflect'
         exclude group: 'org.scala-lang', module: 'scala-library'
