--- a/docker/xgb/ubuntu/Dockerfile-ubuntu-minimal
+++ b/docker/xgb/ubuntu/Dockerfile-ubuntu-minimal
@@ -12,7 +12,7 @@ COPY xgb/ubuntu/common/sbin xgb/common/sbin /usr/sbin/
 RUN \
     chmod +x /usr/sbin/install_packages && \
     sync && \
-    /usr/sbin/install_packages
+    /usr/sbin/install_packages $FROM_IMAGE
 
 COPY jdk1.8.0_171.zip /usr/local/lib/
 RUN \
