add missing h2o.get_leaderboard function to R doc

--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -115,7 +115,8 @@ reference:
       - h2o.flow
       - h2o.gainsLift
       - h2o.gbm
-      - h2o.getAutoML
+      - h2o.get_automl
+      - h2o.get_leadeboard
       - h2o.getConnection
       - h2o.getFrame
       - h2o.getFutureModel
