--- a/docker/xgb/ubuntu/Dockerfile-ubuntu-gpu
+++ b/docker/xgb/ubuntu/Dockerfile-ubuntu-gpu
@@ -1,5 +1,7 @@
 ARG FROM_IMAGE
 FROM ${FROM_IMAGE}
+# declare the arg again to be usable below
+ARG FROM_IMAGE
 
 MAINTAINER h2oai "h2o.ai"
 
@@ -12,7 +14,7 @@ COPY xgb/ubuntu/common/sbin xgb/common/sbin xgb/ubuntu/omp/sbin /usr/sbin/
 RUN \
     chmod +x /usr/sbin/install_packages /usr/sbin/install_omp_packages && \
     sync && \
-    /usr/sbin/install_packages $FROM_IMAGE && \
+    /usr/sbin/install_packages ${FROM_IMAGE} && \
     /usr/sbin/install_omp_packages
 
 COPY jdk1.8.0_171.zip /usr/local/lib/
