--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,8 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht')
+      project(':h2o-genmodel-extensions:jgrapht'),
+      project(':h2o-k8s')
     ]
 
     javaProjects = [
@@ -118,7 +119,8 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht')
+      project(':h2o-genmodel-extensions:jgrapht'),
+      project(':h2o-k8s')
     ]
 
     scalaProjects = [
