--- a/h2o-genmodel-extensions/xgboost/build.gradle
+++ b/h2o-genmodel-extensions/xgboost/build.gradle
@@ -7,8 +7,7 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 ext {
-    xgboost4jVersion = "1.0.0.8"
-    xgboostPredictorVersion = "0.3.14-SNAPSHOT"
+    xgboostPredictorVersion = "0.3.14"
 }
 
 dependencies {
