--- a/h2o-k8s/build.gradle
+++ b/h2o-k8s/build.gradle
@@ -9,7 +9,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.30'
     compile 'ch.qos.logback:logback-classic:1.2.3'
-    compile project(":h2o-app")
+    compile project(":h2o-core")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
