--- a/h2o-k8s/Dockerfile
+++ b/h2o-k8s/Dockerfile
@@ -6,7 +6,7 @@ EXPOSE 54321 54322
 RUN apt update && \
 	apt install openjdk-11-jdk -y
 
-COPY ../build/h2o.jar .
+COPY h2o.jar .
 
 
 CMD java -jar h2o.jar
