--- a/h2o-k8s/build.gradle
+++ b/h2o-k8s/build.gradle
@@ -9,4 +9,5 @@ repositories {
 dependencies {
     compile project(":h2o-core")
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'com.github.stefanbirkner:system-rules:1.19.0'
 }
