--- a/gradle.properties
+++ b/gradle.properties
@@ -40,7 +40,8 @@ doUploadUBenchResults=false
 #
 # Internal Nexus location
 #
-localNexusLocation=http://nexus.0xdata.loc:8081/nexus/repository
+#localNexusLocation=http://nexus.0xdata.loc:8081/nexus/repository
+localNexusLocation=http://nexus:8081/nexus/repository
 
 #
 # Public Nexus location
