use nexus for gradle dependencies only in CI builds

--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,14 @@ import org.apache.tools.ant.taskdefs.condition.Os
 // The build script settings to fetch plugins and put them on
 // classpath
 buildscript {
+    ext {
+        isCi = (System.getProperty("user.name").equals("jenkins")
+                    || System.getenv("CI") != null
+                    || (rootProject.hasProperty("doCI") && rootProject.doCI == "true"))
+    }
+
     repositories {
-        maven {url "${localNexusLocation}/public" }
+        maven { url isCi ? "${localNexusLocation}/public" : 'https://plugins.gradle.org/m2/' }
         mavenCentral()
         jcenter()
     }
@@ -197,9 +203,7 @@ allprojects {
 
     ext {
         isRelease = rootProject.hasProperty("doRelease")
-        isCi = (System.getProperty("user.name").equals("jenkins")
-                || System.getenv("CI") != null
-                || (rootProject.hasProperty("doCI") && rootProject.doCI == "true"))
+        isCi = isCi
     }
 }
 
@@ -219,7 +223,7 @@ subprojects {
         if (project.hasProperty("enableMavenLocal")) { // useful for development
             mavenLocal()
         }
-        if (project.ext.isCi) {
+        if (isCi) {
             maven {
                 url "${localNexusLocation}/public"
             }
@@ -270,8 +274,8 @@ subprojects {
         }
         if (testNeedsCiProject.contains(project)) {
             logger.warn("The project $project needs CI for running tests! You can pass `-PdoCI=true` to force CI behaviour.")
-            project.testSingleNode.enabled = project.ext.isCi
-            project.testMultiNode.enabled = project.ext.isCi
+            project.testSingleNode.enabled = isCi
+            project.testMultiNode.enabled = isCi
         }
         // Analyze dependencies 
         //apply plugin: 'ca.cutterslade.analyze'
@@ -284,7 +288,7 @@ subprojects {
         apply from: "$rootDir/gradle/cp.gradle"
         if (testNeedsCiProject.contains(project)) {
             logger.warn("The project $project needs CI for running tests! You can pass `-PdoCI=true` to force CI behaviour.")
-            project.testMultiNode.enabled = project.ext.isCi
+            project.testMultiNode.enabled = isCi
         }
     }
 
