--- a/h2o-assemblies/main/build.gradle
+++ b/h2o-assemblies/main/build.gradle
@@ -28,6 +28,7 @@ dependencies {
         compile project(":h2o-orc-parser")
     }
     compile project(":h2o-parquet-parser")
+    compile project(":h2o-k8s")
     compile "org.slf4j:slf4j-log4j12:1.7.10"
 }
 
