--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,8 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht')
+      project(':h2o-genmodel-extensions:jgrapht'),
+      project(':h2o-k8s')
     ]
 
     javaProjects = [
@@ -128,7 +129,8 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht')
+      project(':h2o-genmodel-extensions:jgrapht'),
+      project(':h2o-k8s')
     ]
 
     scalaProjects = [
