--- a/settings.gradle
+++ b/settings.gradle
@@ -38,6 +38,7 @@ include 'h2o-ext-target-encoder'
 include 'h2o-security'
 include 'h2o-logger'
 include 'h2o-genmodel-extensions:jgrapht'
+include 'h2o-k8s'
 
 // GRPC support
 if ("true".equals(System.getenv("H2O_BUILD_GRPC"))) {
