Revert "PUBDEV-6852 - Kubernetes support (#4370)"
Should only go to master

This reverts commit e435d4259388ba337b384bb102958247bb2107fa.

--- a/build.gradle
+++ b/build.gradle
@@ -94,8 +94,7 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht'),
-      project(':h2o-k8s')
+      project(':h2o-genmodel-extensions:jgrapht')
     ]
 
     javaProjects = [
@@ -129,8 +128,7 @@ ext {
       project(':h2o-hive'),
       project(':h2o-security'),
       project(':h2o-logger'),
-      project(':h2o-genmodel-extensions:jgrapht'),
-      project(':h2o-k8s')
+      project(':h2o-genmodel-extensions:jgrapht')
     ]
 
     scalaProjects = [
