--- a/h2o-extensions/xgboost/build.gradle
+++ b/h2o-extensions/xgboost/build.gradle
@@ -1,11 +1,28 @@
 description = "H2O XGBoost support"
 
+ext {
+    xgboost4jVersion = "1.0.0.11"
+}
+
 dependencies {
     compile project(":h2o-core")
     compile project(":h2o-algos")
     compile project(":h2o-genmodel")
     compile project(":h2o-genmodel-ext-xgboost")
     compileOnly 'com.esotericsoftware.kryo:kryo:2.21'
+
+    // XGBoost dependencies published into Maven central by H2O
+    // Versioning rules may differ for XGBoost artifacts published by H2O
+    compile("ai.h2o:xgboost4j_2.12:${xgboost4jVersion}") {
+        exclude group: 'org.scala-lang', module: 'scala-compiler'
+        exclude group: 'org.scala-lang', module: 'scala-reflect'
+        exclude group: 'org.scala-lang', module: 'scala-library'
+        exclude group: 'com.typesafe.akka', module: 'akka-actor_2.11'
+        exclude group: 'com.esotericsoftware.kryo', module: 'kryo'
+    }
+    compile "ai.h2o:xgboost4j-linux-gpuv4:${xgboost4jVersion}"
+    compile "ai.h2o:xgboost4j-linux-minimal:${xgboost4jVersion}"
+    compile "ai.h2o:xgboost4j-osx-minimal:${xgboost4jVersion}"
 
     testCompile "junit:junit:${junitVersion}"
     testCompile "com.github.stefanbirkner:system-rules:1.18.0"
