--- a/h2o-web/build.gradle
+++ b/h2o-web/build.gradle
@@ -100,13 +100,6 @@ task copyGenModelJarToWebRoot(type: Copy) {
   rename { filename -> "h2o-genmodel.jar"}
 }
 
-task copyDeepWaterJarToWebRoot(type: Copy) {
-  from {
-      file("${rootDir}/lib/deepwater-all.jar")
-  }
-  into "src/main/resources/www/${h2oRESTApiVersion}/"
-}
-
 task deleteBowerModules(type: Delete) {
   delete 'lib'
 }
@@ -121,10 +114,6 @@ task deleteFlowFromWebRoot(type: Delete) {
 
 task deleteGenModelJarFromWebRoot(type: Delete) {
     delete "src/main/resources/www/${h2oRESTApiVersion}/h2o-genmodel.jar"
-}
-
-task deleteDeepWaterJarFromWebRoot(type: Delete) {
-    delete "src/main/resources/www/${h2oRESTApiVersion}/deepwater-all.jar"
 }
 
 
@@ -189,11 +178,10 @@ processResources.dependsOn copyExampleFlows
 processResources.dependsOn compileHelpFiles
 processResources.dependsOn copyHelpImages
 processResources.dependsOn copyGenModelJarToWebRoot
-processResources.dependsOn copyDeepWaterJarToWebRoot
 
 compileAndInstallDocFiles.dependsOn installNpmPackages
 compileAndInstallDocFiles.dependsOn ":h2o-bindings:runGenerateRESTAPIBindingsSrc"
 build.dependsOn compileAndInstallDocFiles
 
 // Hook clean stage
-clean.dependsOn deleteFlowFromWebRoot, cleanUpSmokeTest, deleteGenModelJarFromWebRoot, deleteDeepWaterJarFromWebRoot, deleteDocFiles
+clean.dependsOn deleteFlowFromWebRoot, cleanUpSmokeTest, deleteGenModelJarFromWebRoot, deleteDocFiles
