--- a/settings.gradle
+++ b/settings.gradle
@@ -39,7 +39,7 @@ include 'h2o-security'
 include 'h2o-logger'
 include 'h2o-genmodel-extensions:jgrapht'
 include 'h2o-k8s'
-include 'h2o-genmodel-extensions:deepwater'
+include 'h2o-genmodel-ext-deepwater'
 
 // GRPC support
 if ("true".equals(System.getenv("H2O_BUILD_GRPC"))) {
