--- a/h2o-hadoop-common/build.gradle
+++ b/h2o-hadoop-common/build.gradle
@@ -12,5 +12,6 @@ repositories {
 }
 
 dependencies {
+    compile project(":h2o-core")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
