--- a/h2o-hadoop-2/assemblyjar.gradle
+++ b/h2o-hadoop-2/assemblyjar.gradle
@@ -45,7 +45,7 @@ dependencies {
   compile (project(':h2o-persist-hdfs')) {
     transitive = false
   }
-  compile project(':h2o-hive') {
+  compile(project(':h2o-hive')) {
     transitive = false
   }
 
