--- a/h2o-hadoop-2/assemblyjar.gradle
+++ b/h2o-hadoop-2/assemblyjar.gradle
@@ -29,6 +29,7 @@ dependencies {
   compile(project(":h2o-mapreduce-generic")) {
     transitive = false
   }
+  compile project(":h2o-hadoop-common")
   compile project(":h2o-security")
   // Libraries need for Google Cloud Storage strongly require this Guava version
   compile('com.google.guava:guava:20.0') {force = true}
