--- a/h2o-hadoop-3/h2o-cdp7.0-assembly/build.gradle
+++ b/h2o-hadoop-3/h2o-cdp7.0-assembly/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile(project(":h2o-mapreduce-generic")) {
         transitive = false
     }
+    compile project(":h2o-hadoop-common")
     compile project(":h2o-security")
     compileOnly "org.apache.hadoop:hadoop-client:$hadoopMavenArtifactVersion"
     compileOnly "org.apache.hadoop:hadoop-mapreduce-client-app:$hadoopMavenArtifactVersion"
