PUBDEV-7422: prototype h2o.segment_train interface in R

--- a/h2o-r/h2o-DESCRIPTION.template
+++ b/h2o-r/h2o-DESCRIPTION.template
@@ -99,5 +99,6 @@ Collate:
          'w2vutils.R'
          'locate.R'
          'grid.R'
+         'segment.R'
          'predict.R'
          'zzz.R'
