PUBDEV-7089_fix_naming_convention_in_gradle_settings

--- a/h2o-algos/build.gradle
+++ b/h2o-algos/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
 
   // Test dependencies only
-  testCompile project(":h2o-genmodel-extensions:jgrapht")
+  testCompile project(":h2o-genmodel-ext-jgrapht")
   testCompile "junit:junit:${junitVersion}"
   testCompile project(path: ":h2o-core", configuration: "testArchives")
   testCompileOnly 'javax.servlet:servlet-api:2.5'
