PUBDEV-7439: added `h2o.train_segments` to .yml file

--- a/h2o-r/h2o-package/pkgdown/_pkgdown.yml
+++ b/h2o-r/h2o-package/pkgdown/_pkgdown.yml
@@ -279,6 +279,7 @@ reference:
       - h2o.tot_withinss
       - h2o.totss 
       - h2o.toupper
+      - h2o.train_segments
       - h2o.transform
       - h2o.trim
       - h2o.trunc
