--- a/h2o-k8s/tests/clustering/h2o-service.yaml
+++ b/h2o-k8s/tests/clustering/h2o-service.yaml
@@ -16,7 +16,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: h2o-k8s
-          image: 'harbor.h2o.ai/opsh2oai/h2o-3-k8s-runner'
+          image: 'harbor.h2o.ai/opsh2oai/h2o-3-k8s-runner:1'
           ports:
             - containerPort: 54321
               protocol: TCP
