Clear apt caches right before the docker image build process is finished

--- a/docker/jenkins-images/Dockerfile-k8s-test
+++ b/docker/jenkins-images/Dockerfile-k8s-test
@@ -13,6 +13,8 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s 
 
 RUN curl -s https://raw.githubusercontent.com/rancher/k3d/master/install.sh | bash
 
+RUN rm /var/lib/apt/lists -rf
+
 RUN \
     groupadd -g 2117 jenkins && \
     adduser --uid 2117 -gid 2117 --disabled-password --gecos "" jenkins
