--- a/h2o-app/build.gradle
+++ b/h2o-app/build.gradle
@@ -7,8 +7,8 @@ dependencies {
   compile project(":h2o-genmodel")
   compile project(":h2o-core")
   compile project(":h2o-algos")
-  compile project(":h2o-automl")
   compile project(":h2o-ext-target-encoder")
+  compile project(":h2o-k8s")
   runtime project(":${defaultWebserverModule}")
   if (project.hasProperty("doIncludeMojoPipeline") && project.doIncludeMojoPipeline == "true") {
     compile project(":h2o-ext-mojo-pipeline")
