--- a/h2o-k8s/build.gradle
+++ b/h2o-k8s/build.gradle
@@ -8,6 +8,13 @@ repositories {
 
 dependencies {
     compile project(":h2o-core")
+    compileOnly 'javax.servlet:servlet-api:2.5'
+    compile 'org.nanohttpd:nanohttpd:2.3.1'
+    compile 'org.nanohttpd:nanohttpd-webserver:2.3.1'
+    compile 'org.nanohttpd:nanohttpd-nanolets:2.3.1'
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'com.github.stefanbirkner:system-rules:1.19.0'
+    testCompile project(path: ":h2o-core", configuration: "testArchives")
+    testRuntimeOnly project(":${defaultWebserverModule}")
 }
