--- a/h2o-k8s/tests/clustering/h2o-service.yaml
+++ b/h2o-k8s/tests/clustering/h2o-service.yaml
@@ -33,7 +33,7 @@ spec:
       volumes:
       - name: test-volume
         hostPath:
-          path: $H2O_BASE/build/h2o.jar
+          path: /h2o/h2o.jar
           type: File
 ---
 apiVersion: v1
