--- a/h2o-parsers/h2o-parquet-compat/h2o-parquet-v17-compat/build.gradle
+++ b/h2o-parsers/h2o-parquet-compat/h2o-parquet-v17-compat/build.gradle
@@ -35,7 +35,7 @@ apply from: "${rootDir}/gradle/dataCheck.gradle"
 test {
   dependsOn ":h2o-core:testJar"
   dependsOn ":h2o-parquet-parser:testJar"
-  dependsOn smalldataCheck, cpLibs, jar, testJar, testMultiNode
+  dependsOn smalldataCheck, jar, testJar, testMultiNode
 
   // Defeat task 'test' by running no tests.
   exclude '**'
