--- a/h2o-persist-gcs/build.gradle
+++ b/h2o-persist-gcs/build.gradle
@@ -14,7 +14,7 @@ apply from: "${rootDir}/gradle/dataCheck.gradle"
 
 test {
     dependsOn ":h2o-core:testJar"
-    dependsOn smalldataCheck, cpLibs, jar, testJar, testMultiNode
+    dependsOn smalldataCheck, jar, testJar, testMultiNode
 
     // Defeat task 'test' by running no tests.
     exclude '**'
