--- a/h2o-automl/build.gradle
+++ b/h2o-automl/build.gradle
@@ -16,7 +16,7 @@ apply from: "${rootDir}/gradle/dataCheck.gradle"
 
 test {
   dependsOn ":h2o-core:testJar"
-  dependsOn smalldataCheck, cpLibs, jar, testJar, testSingleNode, testMultiNode
+  dependsOn smalldataCheck, jar, testJar, testSingleNode, testMultiNode
 
   // Defeat task 'test' by running no tests.
   exclude '**'
