--- a/h2o-core/build.gradle
+++ b/h2o-core/build.gradle
@@ -67,7 +67,7 @@ jar {
 // complete cluster of free-running JVMs and redirect all output (at the OS
 // level) to files - then scrape the files later for test results.
 test {
-  dependsOn smalldataCheck, cpLibs, testMultiNode, testJar
+  dependsOn smalldataCheck, testMultiNode, testJar
 
   // Defeat task 'test' by running no tests.
   exclude '**'
