--- a/h2o-extensions/target-encoder/build.gradle
+++ b/h2o-extensions/target-encoder/build.gradle
@@ -18,7 +18,7 @@ apply from: "${rootDir}/gradle/dataCheck.gradle"
 test {
     dependsOn ":h2o-core:testJar"
     // Note: multi node tests are ignored right now!
-    dependsOn smalldataCheck, cpLibs, jar, testJar, testSingleNode, testMultiNode
+    dependsOn smalldataCheck, jar, testJar, testSingleNode, testMultiNode
 
     // Defeat task 'test' by running no tests.
     exclude '**'
