--- a/h2o-persist-http/build.gradle
+++ b/h2o-persist-http/build.gradle
@@ -21,7 +21,7 @@ apply from: "${rootDir}/gradle/dataCheck.gradle"
 // level) to files - then scrape the files later for test results.
 test {
   dependsOn ":h2o-core:testJar"
-  dependsOn smalldataCheck, cpLibs, jar, testJar, testMultiNode
+  dependsOn smalldataCheck, jar, testJar, testMultiNode
 
   // Defeat task 'test' by running no tests.
   exclude '**'
