--- a/h2o-scala/build.gradle
+++ b/h2o-scala/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 // complete cluster of free-running JVMs and redirect all output (at the OS
 // level) to files - then scrape the files later for test results.
 test {
-  dependsOn cpLibs, testMultiNode, testJar
+  dependsOn testMultiNode, testJar
 
   // Defeat task 'test' by running no tests.
   exclude '**'
