--- a/h2o-algos/build.gradle
+++ b/h2o-algos/build.gradle
@@ -52,7 +52,7 @@ dependencies {
   testCompile project(":h2o-genmodel-ext-jgrapht")
   testCompile "junit:junit:${junitVersion}"
   testCompile project(path: ":h2o-core", configuration: "testArchives")
-  testCompileOnly 'javax.servlet:servlet-api:2.5'
+  testCompileOnly "javax.servlet:javax.servlet-api:3.0.1"
   testRuntimeOnly project(":${defaultWebserverModule}")
 }
 
