--- a/h2o-core/build.gradle
+++ b/h2o-core/build.gradle
@@ -16,8 +16,7 @@ dependencies {
   compile 'org.javassist:javassist:3.25.0-GA'
   compile "org.apache.commons:commons-math3:3.3"
   compile "commons-io:commons-io:2.4"
-  compileOnly "javax.servlet:servlet-api:2.5"
-  testCompileOnly "javax.servlet:servlet-api:2.5"
+  compileOnly "javax.servlet:javax.servlet-api:3.0.1"
   compile ("com.github.wendykierp:JTransforms:3.1") { exclude module: "junit" }
   compile project(":h2o-jaas-pam")
 
@@ -40,18 +39,14 @@ dependencies {
     exclude group: 'org.mapdb', module: 'mapdb'
   }
 
-  // Jets3t is required by S3N support
-  // compile 'net.java.dev.jets3t:jets3t:0.6.1'
-  
   testCompile "com.google.guava:guava:16.0.1"
   testCompile "junit:junit:${junitVersion}"
   testCompile "org.mockito:mockito-core:2.18.0"
   testCompile "org.apache.httpcomponents:httpclient:4.1"
   testCompile "com.github.stefanbirkner:system-rules:1.18.0"
   testCompile "org.apache.derby:derby:10.14.2.0"
-
-  // Jetty needs to be here for tests
-  testRuntimeOnly project(":h2o-jetty-8")
+  testCompileOnly "javax.servlet:javax.servlet-api:3.0.1"
+  testRuntimeOnly project(":${defaultWebserverModule}")
 }
 
 apply from: "${rootDir}/gradle/dataCheck.gradle"
