--- a/h2o-k8s/tests/clustering/h2o-service.yaml
+++ b/h2o-k8s/tests/clustering/h2o-service.yaml
@@ -37,7 +37,7 @@ spec:
             value: '320'
           - name: H2O_NODE_EXPECTED_COUNT
             value: '2'
-          - name: H2O_K8S_API_PORT
+          - name: H2O_KUBERNETES_API_PORT
             value: '8081'
       volumes:
       - name: test-volume
