PUBDEV-7469 - Expose leader node only on K8S (#4554)
* PUBDEV-7469 - Expose leader node only on K8S

* Revert deleted dependency in H2OApp

* Remove Servlet API from h2o-k8s dependencies

* Rename H2O_K8S_API_PORT to  H2O_KUBERNETES_API_PORT

* Remove forgotten import from H2OHttpViewImpl

* Remove h2o-k8s dependency from H2O App

* Store leaderNode locally before evaluating in KubernetesLeaderNodeProbeHandler

* Removed unused import.

Co-authored-by: Pavel Pscheidl <pavelpscheidl@gmail.com>

--- a/h2o-k8s/tests/clustering/h2o-service.yaml
+++ b/h2o-k8s/tests/clustering/h2o-service.yaml
@@ -20,6 +20,13 @@ spec:
           ports:
             - containerPort: 54321
               protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /kubernetes/isLeaderNode
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 1
           volumeMounts:
             - name: test-volume
               mountPath: "h2o.jar"
@@ -30,6 +37,8 @@ spec:
             value: '320'
           - name: H2O_NODE_EXPECTED_COUNT
             value: '2'
+          - name: H2O_KUBERNETES_API_PORT
+            value: '8081'
       volumes:
       - name: test-volume
         hostPath:
