--- a/h2o-k8s/build.gradle
+++ b/h2o-k8s/build.gradle
@@ -14,6 +14,6 @@ dependencies {
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'com.github.stefanbirkner:system-rules:1.19.0'
-    testCompile project(path: ":h2o-core", configuration: "testArchives")
+    testCompile project(":h2o-test-support")
     testRuntimeOnly project(":${defaultWebserverModule}")
 }
