Fix assemblies to produce JDK 8 output and not whatever the JDK used to run Gradle with has

--- a/h2o-assemblies/main/build.gradle
+++ b/h2o-assemblies/main/build.gradle
@@ -3,6 +3,11 @@ apply plugin: 'java'
 apply plugin: 'com.github.hierynomus.license'
 
 description = "H2O Application Assembly"
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+
 // Exclude unwanted dependencies
 configurations {
     compile.exclude module: 'junit'
