Revert Gradle 6.3 and purge IDEA plugin (#4567)

--- a/h2o-bindings/build.gradle
+++ b/h2o-bindings/build.gradle
@@ -32,6 +32,13 @@ dependencies {
     srcGenCompile project(path: ":h2o-assemblies:main", configuration: "shadow")
 }
 
+// Configure idea import
+idea {
+    module {
+        generatedSourceDirs += srcGenBindingsDir
+    }
+}
+
 sourceSets {
   main {
     java {
