--- a/h2o-grpc/build.gradle
+++ b/h2o-grpc/build.gradle
@@ -104,6 +104,20 @@ task generatePyProtoFiles(type: Exec) {
 build.dependsOn verifyDependencies
 build.dependsOn generatePyProtoFiles
 
+
+//----------------------------------------------------------------------------------------------------------------------
+// Instruct IDEA to use the generated files as sources
+//----------------------------------------------------------------------------------------------------------------------
+
+idea {
+    module {
+        sourceDirs += file("${protobuf.generatedFilesBaseDir}/main/java");
+        sourceDirs += file("${protobuf.generatedFilesBaseDir}/main/grpc");
+        sourceDirs += file("${protobuf.generatedFilesBaseDir}/main/python");
+    }
+}
+
+
 //----------------------------------------------------------------------------------------------------------------------
 // Clean up
 //----------------------------------------------------------------------------------------------------------------------
