Enable parallel builds for Gradle by default

--- a/gradle.properties
+++ b/gradle.properties
@@ -62,3 +62,5 @@ defaultHdfsDependency=hadoop-hdfs-client
 defaultHiveExecVersion=1.1.0
 
 defaultWebserverModule=h2o-jetty-8
+
+org.gradle.parallel=true
